--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-rss-parser",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "a simple RSS Feed parser app",
   "main": "index.js",
   "scripts": {
@@ -14,14 +14,19 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "rss-parser": "^3.8.0",
-    "svg-url-loader": "^6.0.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "babel-loader": "^9.1.3",
+    "buffer": "^6.0.3",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
+    "https-browserify": "^1.0.0",
+    "rss-parser": "^3.13.0",
+    "stream-browserify": "^3.0.0",
+    "svg-url-loader": "^8.0.0",
+    "timers-browserify": "^2.0.12",
+    "url": "^0.11.3",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "react": "^16.13.1",
